--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Simple Website</title>
 </head>
 <body>
-    <h1>Welcome to My Simple Website</h1>
+    <h1>Welcome to Borel's Simple Website</h1>
     <p>This is the content of the folder.</p>
     <ul>
         <li>File 1</li>
